external-crates/move/crates/move-compiler/tests/move_check/typing/duplicate_function_parameter_names.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09002]: unused variable
  ┌─ tests/move_check/typing/duplicate_function_parameter_names.move:2:13
  │
2 │     fun foo(x: u64, x: u64) {}
  │             ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09002]: unused variable
  ┌─ tests/move_check/typing/duplicate_function_parameter_names.move:2:21
  │
2 │     fun foo(x: u64, x: u64) {}
  │                     ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/typing/duplicate_function_parameter_names.move:2:21
  │
2 │     fun foo(x: u64, x: u64) {}
  │             -       ^ Duplicate parameter with name 'x'
  │             │        
  │             Previously declared here
